--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+# Deployment builds
+dist
+
 # Dependency directories
 node_modules
 jspm_packages
@@ -35,3 +38,9 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# SublimeText Files
+*.sublime-workspace
+
+# Config Files
+config.yml
