--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "express-brute-redis": "0.0.1",
     "express-session": "^1.14.0",
     "express-validator": "^2.20.8",
-    "gridlex": "^2.1.1",
     "i18next": "^3.4.1",
     "i18next-express-middleware": "^1.0.1",
     "i18next-node-fs-backend": "^0.1.2",
@@ -52,6 +51,14 @@
     "js-yaml": "^3.6.1",
     "lodash": "^4.15.0",
     "markdown-it": "^7.0.1",
+    "markdown-it-abbr": "^1.0.3",
+    "markdown-it-anchor": "^2.5.0",
+    "markdown-it-emoji": "^1.2.0",
+    "markdown-it-expand-tabs": "^1.0.11",
+    "markdown-it-external-links": "0.0.5",
+    "markdown-it-footnote": "^3.0.1",
+    "markdown-it-task-lists": "^1.4.1",
+    "markdown-it-toc-and-anchor": "^4.1.1",
     "moment": "^2.14.1",
     "moment-timezone": "^0.5.5",
     "mongoose": "^4.5.9",
@@ -63,6 +70,8 @@
     "roboto-fontface": "^0.6.0",
     "serve-favicon": "^2.3.0",
     "simplemde": "^1.11.2",
+    "slug": "^0.9.1",
+    "twemoji-awesome": "^1.0.4",
     "validator": "^5.5.0",
     "validator-as-promised": "^1.0.2",
     "winston": "^2.2.0"
