--- a/package.json
+++ b/package.json
@@ -38,20 +38,20 @@
     "cheerio": "^0.20.0",
     "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
+    "connect-loki": "^1.0.4",
     "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-brute": "^0.7.0-beta.0",
-    "express-brute-redis": "0.0.1",
     "express-session": "^1.14.0",
     "express-validator": "^2.20.8",
     "highlight.js": "^9.6.0",
     "i18next": "^3.4.1",
     "i18next-express-middleware": "^1.0.1",
     "i18next-node-fs-backend": "^0.1.2",
-    "ioredis": "^2.3.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.15.0",
+    "lokijs": "^1.4.1",
     "markdown-it": "^7.0.1",
     "markdown-it-abbr": "^1.0.3",
     "markdown-it-anchor": "^2.5.0",
@@ -64,8 +64,6 @@
     "markdown-it-toc-and-anchor": "^4.1.1",
     "moment": "^2.14.1",
     "moment-timezone": "^0.5.5",
-    "mongoose": "^4.5.9",
-    "mongoose-delete": "^0.3.4",
     "nodegit": "^0.14.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
@@ -86,7 +84,6 @@
     "chai-as-promised": "^5.3.0",
     "codacy-coverage": "^2.0.0",
     "font-awesome": "^4.6.3",
-    "gridlex": "^2.1.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.12",
@@ -99,12 +96,12 @@
     "gulp-tar": "^1.9.0",
     "gulp-uglify": "^2.0.0",
     "gulp-zip": "^3.2.0",
-    "istanbul": "^0.4.4",
+    "istanbul": "^0.4.5",
     "jquery": "^3.1.0",
     "merge-stream": "^1.0.0",
     "mocha": "^3.0.2",
     "mocha-lcov-reporter": "^1.2.0",
-    "nodemon": "^1.10.0",
+    "nodemon": "^1.10.2",
     "snyk": "^1.18.0",
     "vue": "^1.0.26"
   }
