--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-brute": "^1.0.0",
+    "express-brute-loki": "^1.0.0",
     "express-session": "^1.14.0",
     "express-validator": "^2.20.8",
     "highlight.js": "^9.6.0",
     "i18next": "^3.4.1",
     "i18next-express-middleware": "^1.0.1",
     "i18next-node-fs-backend": "^0.1.2",
+    "jquery-smooth-scroll": "^2.0.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.15.0",
     "lokijs": "^1.4.1",
