--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "body-parser": "^1.15.2",
     "bulma": "^0.1.2",
     "cheerio": "^0.22.0",
+    "child-process-promise": "^2.1.3",
     "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
     "connect-loki": "^1.0.6",
@@ -46,6 +47,8 @@
     "express-brute-loki": "^1.0.0",
     "express-session": "^1.14.0",
     "express-validator": "^2.20.8",
+    "farmhash": "^1.2.0",
+    "git-wrapper2-promise": "^0.2.9",
     "highlight.js": "^9.6.0",
     "i18next": "^3.4.1",
     "i18next-express-middleware": "^1.0.1",
@@ -66,11 +69,10 @@
     "markdown-it-toc-and-anchor": "^4.1.1",
     "moment": "^2.14.1",
     "moment-timezone": "^0.5.5",
-    "nodegit": "^0.14.1",
+    "msgpack5": "^3.4.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta5",
-    "roboto-fontface": "^0.6.0",
     "serve-favicon": "^2.3.0",
     "simplemde": "^1.11.2",
     "slug": "^0.9.1",
