Caching + Edit Mode UI

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcryptjs-then": "^1.0.1",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
+    "bson": "^0.5.4",
     "bulma": "^0.1.2",
     "cheerio": "^0.22.0",
     "child-process-promise": "^2.1.3",
@@ -48,6 +49,7 @@
     "express-session": "^1.14.0",
     "express-validator": "^2.20.8",
     "farmhash": "^1.2.0",
+    "fs-extra": "^0.30.0",
     "git-wrapper2-promise": "^0.2.9",
     "highlight.js": "^9.6.0",
     "i18next": "^3.4.1",
@@ -69,10 +71,10 @@
     "markdown-it-toc-and-anchor": "^4.1.1",
     "moment": "^2.14.1",
     "moment-timezone": "^0.5.5",
-    "msgpack5": "^3.4.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta5",
+    "search-index": "^0.8.15",
     "serve-favicon": "^2.3.0",
     "simplemde": "^1.11.2",
     "slug": "^0.9.1",
