--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "bson": "^0.5.4",
-    "bulma": "^0.1.2",
     "cheerio": "^0.22.0",
     "child-process-promise": "^2.1.3",
     "compression": "^1.6.2",
@@ -55,7 +54,6 @@
     "i18next": "^3.4.1",
     "i18next-express-middleware": "^1.0.1",
     "i18next-node-fs-backend": "^0.1.2",
-    "jquery-smooth-scroll": "^2.0.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.15.0",
     "lokijs": "^1.4.1",
@@ -77,15 +75,14 @@
     "search-index": "^0.8.15",
     "serve-favicon": "^2.3.0",
     "simplemde": "^1.11.2",
-    "slug": "^0.9.1",
-    "sticky-js": "^1.0.5",
-    "twemoji-awesome": "^1.0.4",
     "validator": "^5.5.0",
     "validator-as-promised": "^1.0.2",
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "ace-builds": "^1.2.5",
     "babel-preset-es2015": "^6.13.2",
+    "bulma": "^0.1.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "codacy-coverage": "^2.0.0",
@@ -104,11 +101,14 @@
     "gulp-zip": "^3.2.0",
     "istanbul": "^0.4.5",
     "jquery": "^3.1.0",
+    "jquery-smooth-scroll": "^2.0.0",
     "merge-stream": "^1.0.0",
     "mocha": "^3.0.2",
     "mocha-lcov-reporter": "^1.2.0",
     "nodemon": "^1.10.2",
+    "twemoji-awesome": "^1.0.4",
     "snyk": "^1.18.1",
+    "sticky-js": "^1.0.5",
     "vue": "^1.0.26"
   }
 }
