--- a/package.json
+++ b/package.json
@@ -49,31 +49,33 @@
     "express-brute": "^1.0.0",
     "express-brute-loki": "^1.0.0",
     "express-session": "^1.14.1",
-    "express-validator": "^2.20.8",
+    "express-validator": "^2.20.10",
     "farmhash": "^1.2.1",
+    "file-type": "^3.8.0",
     "fs-extra": "^0.30.0",
     "git-wrapper2-promise": "^0.2.9",
-    "highlight.js": "^9.6.0",
-    "i18next": "^3.4.2",
+    "highlight.js": "^9.7.0",
+    "i18next": "^3.4.3",
     "i18next-express-middleware": "^1.0.2",
     "i18next-node-fs-backend": "^0.1.2",
     "js-yaml": "^3.6.1",
-    "lodash": "^4.15.0",
+    "lodash": "^4.16.1",
     "lokijs": "^1.4.1",
     "markdown-it": "^8.0.0",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^2.5.0",
-    "markdown-it-attrs": "^0.7.0",
+    "markdown-it-attrs": "^0.7.1",
     "markdown-it-emoji": "^1.2.0",
     "markdown-it-expand-tabs": "^1.0.11",
     "markdown-it-external-links": "0.0.5",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-task-lists": "^1.4.1",
-    "moment": "^2.15.0",
+    "moment": "^2.15.1",
     "moment-timezone": "^0.5.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
+    "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
     "search-index": "^0.8.15",
     "serve-favicon": "^2.3.0",
@@ -89,7 +91,7 @@
   "devDependencies": {
     "ace-builds": "^1.2.5",
     "babel-preset-es2015": "^6.14.0",
-    "bulma": "^0.1.2",
+    "bulma": "^0.2.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "codacy-coverage": "^2.0.0",
@@ -107,7 +109,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-zip": "^3.2.0",
     "istanbul": "^0.4.5",
-    "jquery": "^3.1.0",
+    "jquery": "^3.1.1",
     "jquery-smooth-scroll": "^2.0.0",
     "merge-stream": "^1.0.0",
     "mocha": "^3.0.2",
@@ -115,7 +117,7 @@
     "nodemon": "^1.10.2",
     "sticky-js": "^1.0.5",
     "twemoji-awesome": "^1.0.4",
-    "vue": "^1.0.26"
+    "vue": "^1.0.27"
   },
   "snyk": true
 }
