Image upload process + right-click menu UI

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-validator": "^2.20.10",
     "farmhash": "^1.2.1",
     "file-type": "^3.8.0",
+    "filesize.js": "^1.0.2",
     "fs-extra": "^0.30.0",
     "git-wrapper2-promise": "^0.2.9",
     "highlight.js": "^9.7.0",
@@ -59,7 +60,7 @@
     "i18next-express-middleware": "^1.0.2",
     "i18next-node-fs-backend": "^0.1.2",
     "js-yaml": "^3.6.1",
-    "lodash": "^4.16.1",
+    "lodash": "^4.16.2",
     "lokijs": "^1.4.1",
     "markdown-it": "^8.0.0",
     "markdown-it-abbr": "^1.0.4",
@@ -72,6 +73,7 @@
     "markdown-it-task-lists": "^1.4.1",
     "moment": "^2.15.1",
     "moment-timezone": "^0.5.5",
+    "multer": "^1.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
@@ -84,13 +86,13 @@
     "snyk": "^1.19.1",
     "socket.io": "^1.4.8",
     "sticky-js": "^1.0.7",
-    "validator": "^5.7.0",
+    "validator": "^6.0.0",
     "validator-as-promised": "^1.0.2",
     "winston": "^2.2.0"
   },
   "devDependencies": {
     "ace-builds": "^1.2.5",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2015": "^6.16.0",
     "bulma": "^0.1.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
@@ -99,11 +101,11 @@
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-clean-css": "^2.0.12",
+    "gulp-clean-css": "^2.0.13",
     "gulp-concat": "^2.6.0",
     "gulp-gzip": "^1.4.0",
     "gulp-include": "^2.3.1",
-    "gulp-nodemon": "^2.1.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-tar": "^1.9.0",
@@ -112,14 +114,15 @@
     "istanbul": "^0.4.5",
     "jquery": "^3.1.1",
     "jquery-contextmenu": "^2.2.4",
+    "jquery-simple-upload": "^1.0.0",
     "jquery-smooth-scroll": "^2.0.0",
     "merge-stream": "^1.0.0",
-    "mocha": "^3.0.2",
+    "mocha": "^3.1.0",
     "mocha-lcov-reporter": "^1.2.0",
     "nodemon": "^1.10.2",
-    "sticky-js": "^1.0.5",
+    "sticky-js": "^1.1.0",
     "twemoji-awesome": "^1.0.4",
-    "vue": "^1.0.27"
+    "vue": "^1.0.28"
   },
   "snyk": true
 }
