Removed Search-Index and LokiJS, replaced with Mongo + Updated VueJs

--- a/config.sample.yml
+++ b/config.sample.yml
@@ -34,9 +34,15 @@ wsPort: 8080
 # Data Directories
 # ---------------------------------------------------------------------
 
-datadir:
+paths:
   repo: ./repo
-  db: ./data
+  data: ./data
+
+# ---------------------------------------------------------------------
+# Database Connection String
+# ---------------------------------------------------------------------
+
+db: mongodb://localhost:27017/wiki
 
 # ---------------------------------------------------------------------
 # Git Connection Info
