--- a/package.json
+++ b/package.json
@@ -29,26 +29,24 @@
   },
   "homepage": "https://github.com/Requarks/wiki#readme",
   "engines": {
-    "node": ">=4.4.5"
+    "node": ">=4.6"
   },
   "dependencies": {
     "auto-load": "^2.1.0",
     "bcryptjs-then": "^1.0.1",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
-    "bson": "^0.5.5",
     "cheerio": "^0.22.0",
     "child-process-promise": "^2.1.3",
     "chokidar": "^1.6.0",
     "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
-    "connect-loki": "^1.0.6",
-    "connect-redis": "^3.1.0",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
-    "cron": "^1.1.0",
+    "cron": "^1.1.1",
     "express": "^4.14.0",
     "express-brute": "^1.0.0",
-    "express-brute-loki": "^1.0.0",
+    "express-brute-mongo": "^0.1.0",
     "express-session": "^1.14.1",
     "express-validator": "^2.20.10",
     "farmhash": "^1.2.1",
@@ -61,31 +59,30 @@
     "i18next-express-middleware": "^1.0.2",
     "i18next-node-fs-backend": "^0.1.2",
     "js-yaml": "^3.6.1",
-    "lodash": "^4.16.2",
-    "lokijs": "^1.4.1",
+    "lodash": "^4.16.4",
     "markdown-it": "^8.0.0",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^2.5.0",
     "markdown-it-attrs": "^0.7.1",
-    "markdown-it-emoji": "^1.2.0",
+    "markdown-it-emoji": "^1.3.0",
     "markdown-it-expand-tabs": "^1.0.11",
-    "markdown-it-external-links": "0.0.5",
+    "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-task-lists": "^1.4.1",
     "moment": "^2.15.1",
-    "moment-timezone": "^0.5.5",
+    "moment-timezone": "^0.5.6",
+    "mongoose": "^4.6.3",
     "multer": "^1.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
-    "search-index": "^0.8.15",
     "serve-favicon": "^2.3.0",
     "sharp": "^0.16.0",
     "simplemde": "^1.11.2",
     "snyk": "^1.19.1",
-    "socket.io": "^1.4.8",
+    "socket.io": "^1.5.0",
     "sticky-js": "^1.0.7",
     "validator": "^6.0.0",
     "validator-as-promised": "^1.0.2",
@@ -96,7 +93,7 @@
     "babel-preset-es2015": "^6.16.0",
     "bulma": "^0.1.2",
     "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
+    "chai-as-promised": "^6.0.0",
     "codacy-coverage": "^2.0.0",
     "filesize.js": "^1.0.1",
     "font-awesome": "^4.6.3",
@@ -120,10 +117,10 @@
     "merge-stream": "^1.0.0",
     "mocha": "^3.1.0",
     "mocha-lcov-reporter": "^1.2.0",
-    "nodemon": "^1.10.2",
-    "sticky-js": "^1.1.0",
+    "nodemon": "^1.11.0",
+    "sticky-js": "^1.1.2",
     "twemoji-awesome": "^1.0.4",
-    "vue": "^1.0.28"
+    "vue": "^2.0.1"
   },
   "snyk": true
 }
