--- a/package.json
+++ b/package.json
@@ -73,7 +73,11 @@
     "mongoose": "^4.6.3",
     "multer": "^1.2.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
+    "passport-windowslive": "^1.0.2",
+    "passport.socketio": "^3.6.2",
     "pug": "^2.0.0-beta6",
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
