Integration to Requarks Core

--- a/package.json
+++ b/package.json
@@ -81,7 +81,9 @@
     "pug": "^2.0.0-beta6",
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
+    "requarks-core": "github:requarks/core",
     "request": "^2.75.0",
+    "search-index": "^0.9.6",
     "serve-favicon": "^2.3.0",
     "sharp": "^0.16.1",
     "simplemde": "^1.11.2",
@@ -111,6 +113,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-tar": "^1.9.0",
     "gulp-uglify": "^2.0.0",
+    "gulp-watch": "^4.3.11",
     "gulp-zip": "^3.2.0",
     "istanbul": "^0.4.5",
     "jquery": "^3.1.1",
