Formatted Account pages + fixed search UI

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "dev": "gulp",
+    "dev": "gulp dev",
     "test": "snyk test && istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec ./tests/index.js && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage",
     "snyk-protect": "snyk protect",
     "__prepublish": "npm run snyk-protect"
@@ -53,24 +53,24 @@
     "filesize.js": "^1.0.2",
     "fs-extra": "^0.30.0",
     "git-wrapper2-promise": "^0.2.9",
-    "highlight.js": "^9.7.0",
-    "i18next": "^3.4.3",
+    "highlight.js": "^9.8.0",
+    "i18next": "^3.5.2",
     "i18next-express-middleware": "^1.0.2",
-    "i18next-node-fs-backend": "^0.1.2",
-    "js-yaml": "^3.6.1",
-    "lodash": "^4.16.5",
-    "markdown-it": "^8.0.0",
+    "i18next-node-fs-backend": "^0.1.3",
+    "js-yaml": "^3.7.0",
+    "lodash": "^4.17.2",
+    "markdown-it": "^8.1.0",
     "markdown-it-abbr": "^1.0.4",
-    "markdown-it-anchor": "^2.5.0",
+    "markdown-it-anchor": "^2.5.1",
     "markdown-it-attrs": "^0.8.0",
     "markdown-it-emoji": "^1.3.0",
     "markdown-it-expand-tabs": "^1.0.11",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-task-lists": "^1.4.1",
-    "moment": "^2.15.1",
-    "moment-timezone": "^0.5.6",
-    "mongoose": "^4.6.3",
+    "moment": "^2.17.0",
+    "moment-timezone": "^0.5.9",
+    "mongoose": "^4.6.8",
     "multer": "^1.2.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
@@ -82,17 +82,17 @@
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
     "requarks-core": "github:requarks/core",
-    "request": "^2.75.0",
+    "request": "^2.79.0",
     "search-index": "^0.9.6",
-    "serve-favicon": "^2.3.0",
+    "serve-favicon": "^2.3.2",
     "sharp": "^0.16.1",
     "simplemde": "^1.11.2",
     "snyk": "^1.19.1",
-    "socket.io": "^1.5.0",
+    "socket.io": "^1.6.0",
     "sticky-js": "^1.0.7",
     "validator": "^6.0.0",
     "validator-as-promised": "^1.0.2",
-    "winston": "^2.2.0"
+    "winston": "^2.3.0"
   },
   "devDependencies": {
     "ace-builds": "^1.2.5",
@@ -105,7 +105,7 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.13",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-gzip": "^1.4.0",
     "gulp-include": "^2.3.1",
     "gulp-nodemon": "^2.2.1",
@@ -124,9 +124,11 @@
     "mocha": "^3.1.2",
     "mocha-lcov-reporter": "^1.2.0",
     "nodemon": "^1.11.0",
-    "sticky-js": "^1.1.4",
+    "run-sequence": "^1.2.2",
+    "snyk": "^1.20.0",
+    "sticky-js": "^1.1.5",
     "twemoji-awesome": "^1.0.4",
-    "vue": "^2.0.3"
+    "vue": "^2.1.0"
   },
   "snyk": true
 }
