--- a/config.sample.yml
+++ b/config.sample.yml
@@ -35,6 +35,8 @@ paths:
 # Site Authentication
 # ---------------------------------------------------------------------
 
+public: false
+
 auth:
   local:
     enabled: true
