Files Management + Editor Modal + Code Editor fixes

--- a/config.sample.yml
+++ b/config.sample.yml
@@ -32,6 +32,15 @@ paths:
   data: ./data
 
 # ---------------------------------------------------------------------
+# Upload Limits
+# ---------------------------------------------------------------------
+# In megabytes (MB)
+
+uploads:
+  maxImageFileSize: 3
+  maxOtherFileSize: 100
+
+# ---------------------------------------------------------------------
 # Site Language
 # ---------------------------------------------------------------------
 # Possible values: en, fr
