--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
-    "cron": "^1.1.1",
+    "cron": "^1.2.1",
     "express": "^4.14.0",
     "express-brute": "^1.0.0",
     "express-brute-mongoose": "0.0.7",
@@ -53,13 +53,13 @@
     "filesize.js": "^1.0.2",
     "fs-extra": "^1.0.0",
     "git-wrapper2-promise": "^0.2.9",
-    "highlight.js": "^9.8.0",
+    "highlight.js": "^9.9.0",
     "i18next": "^4.1.1",
     "i18next-express-middleware": "^1.0.2",
     "i18next-node-fs-backend": "^0.1.3",
     "js-yaml": "^3.7.0",
     "lodash": "^4.17.2",
-    "markdown-it": "^8.2.1",
+    "markdown-it": "^8.2.2",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^2.6.0",
     "markdown-it-attrs": "^0.8.0",
@@ -68,10 +68,11 @@
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-task-lists": "^1.4.1",
+    "mime-types": "^2.1.13",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.10",
-    "mongoose": "^4.7.2",
-    "multer": "^1.2.0",
+    "mongoose": "^4.7.3",
+    "multer": "^1.2.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
@@ -87,8 +88,7 @@
     "serve-favicon": "^2.3.2",
     "sharp": "^0.16.1",
     "simplemde": "^1.11.2",
-    "snyk": "^1.19.1",
-    "socket.io": "^1.6.0",
+    "socket.io": "^1.7.2",
     "sticky-js": "^1.0.7",
     "validator": "^6.2.0",
     "validator-as-promised": "^1.0.2",
@@ -100,17 +100,16 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "codacy-coverage": "^2.0.0",
-    "filesize.js": "^1.0.1",
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-clean-css": "^2.2.1",
+    "gulp-clean-css": "^2.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-gzip": "^1.4.0",
     "gulp-include": "^2.3.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^2.3.2",
+    "gulp-sass": "^3.0.0",
     "gulp-tar": "^1.9.0",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.11",
@@ -125,10 +124,10 @@
     "mocha-lcov-reporter": "^1.2.0",
     "nodemon": "^1.11.0",
     "run-sequence": "^1.2.2",
-    "snyk": "^1.21.2",
+    "snyk": "^1.22.1",
     "sticky-js": "^1.1.6",
     "twemoji-awesome": "^1.0.4",
-    "vue": "^2.1.4"
+    "vue": "^2.1.6"
   },
   "snyk": true
 }
