--- a/package.json
+++ b/package.json
@@ -51,13 +51,14 @@
     "farmhash": "^1.2.1",
     "file-type": "^4.0.0",
     "filesize.js": "^1.0.2",
-    "fs-extra": "^1.0.0",
+    "fs-extra": "^2.0.0",
     "git-wrapper2-promise": "^0.2.9",
     "highlight.js": "^9.9.0",
-    "i18next": "^4.1.4",
+    "i18next": "^6.0.3",
     "i18next-express-middleware": "^1.0.2",
     "i18next-node-fs-backend": "^0.1.3",
     "js-yaml": "^3.7.0",
+    "klaw": "^1.3.1",
     "lodash": "^4.17.3",
     "markdown-it": "^8.2.2",
     "markdown-it-abbr": "^1.0.4",
@@ -79,14 +80,14 @@
     "passport-local": "^1.0.0",
     "passport-windowslive": "^1.0.2",
     "passport.socketio": "^3.7.0",
-    "pug": "^2.0.0-beta6",
+    "pug": "^2.0.0-beta10",
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
-    "requarks-core": "github:requarks/core",
+    "requarks-core": "^0.2.0",
     "request": "^2.79.0",
     "search-index": "^0.9.9",
     "serve-favicon": "^2.3.2",
-    "sharp": "^0.17.0",
+    "sharp": "^0.17.1",
     "simplemde": "^1.11.2",
     "socket.io": "^1.7.2",
     "sticky-js": "^1.0.7",
@@ -112,7 +113,7 @@
     "gulp-tar": "^1.9.0",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.11",
-    "gulp-zip": "^3.2.0",
+    "gulp-zip": "^4.0.0",
     "istanbul": "^0.4.5",
     "jquery": "^3.1.1",
     "jquery-contextmenu": "^2.4.1",
@@ -123,10 +124,10 @@
     "mocha-lcov-reporter": "^1.2.0",
     "nodemon": "^1.11.0",
     "run-sequence": "^1.2.2",
-    "snyk": "^1.22.1",
-    "sticky-js": "^1.1.6",
+    "snyk": "^1.24.6",
+    "sticky-js": "^1.1.8",
     "twemoji-awesome": "^1.0.4",
-    "vue": "^2.1.7"
+    "vue": "^2.1.10"
   },
   "snyk": true
 }
