--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,5 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{jade,pug}]
+[*.{jade,pug,md}]
 trim_trailing_whitespace = false
