Search-Index integration + cache flush on start

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "lcdata": true,
     "mark": true,
     "rights": true,
+    "search": true,
     "upl": true,
     "winston": true,
     "ws": true,
