--- a/package.json
+++ b/package.json
@@ -91,6 +91,8 @@
     "simplemde": "^1.11.2",
     "socket.io": "^1.7.2",
     "sticky-js": "^1.0.7",
+    "stopword": "^0.1.1",
+    "stream-to-promise": "^2.2.0",
     "validator": "^6.2.0",
     "validator-as-promised": "^1.0.2",
     "winston": "^2.3.0"
@@ -139,7 +141,6 @@
       "app",
       "appconfig",
       "appdata",
-      "bgAgent",
       "db",
       "entries",
       "git",
@@ -147,6 +148,7 @@
       "lang",
       "lcdata",
       "rights",
+      "search",
       "upl",
       "winston",
       "ws",
