--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
+    "start": "node wiki start",
     "dev": "gulp dev",
     "test": "snyk test && standard && pug-lint ./views",
     "snyk-protect": "snyk protect",
@@ -40,6 +40,7 @@
     "cheerio": "^0.22.0",
     "child-process-promise": "^2.2.0",
     "chokidar": "^1.6.0",
+    "commander": "^2.9.0",
     "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
@@ -76,6 +77,7 @@
     "moment-timezone": "^0.5.11",
     "mongoose": "^4.8.1",
     "multer": "^1.2.1",
+    "ora": "^1.1.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
