--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "wiki",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.6",
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
   "main": "server.js",
   "scripts": {
     "start": "node wiki start",
+    "stop": "node wiki stop",
     "dev": "gulp dev",
     "test": "snyk test && standard && pug-lint ./views",
     "snyk-protect": "snyk protect",
