--- a/npm/package.json
+++ b/npm/package.json
@@ -1,12 +1,11 @@
 {
   "name": "wiki.js",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.0-beta.7",
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
   "main": "install.js",
   "scripts": {
     "test": "exit 1",
-    "install": "node install.js",
-    "preuninstall": "node uninstall.js"
+    "postinstall": "node install.js"
   },
   "repository": {
     "type": "git",
